# probabilistic-plane-refinement

./: CMakeLists.txt  README.md  package.xml
src/Refinement/: SurfaceRefinement.cpp  SurfaceRefinement.h
src/SegmentModel/: ColorHistogramSegmentModel.cpp  ColorHistogramSegmentModel.h  GaussiansSegmentModel.cpp  GaussiansSegmentModel.h  MultiTypeSegmentModel.cpp  MultiTypeSegmentModel.h  SegmentModel.cpp  SegmentModel.h
src/SegmentModelFactory/: AdaptiveSingleGaussiansSegmentModelFactory.cpp  AdaptiveSingleGaussiansSegmentModelFactory.h  ColorHistogramSegmentModelFactory.cpp  ColorHistogramSegmentModelFactory.h  RGBDSegmentModelFactory.cpp  RGBDSegmentModelFactory.h  SegmentModelFactory.cpp  SegmentModelFactory.h
src/SurfaceInference/: SurfaceInference.cpp  SurfaceInference.h
src/examples/: pcd_tester.cpp
src/pprgeometry/: HasDistance.cpp~  HasDistance.h~  KeyPoint.h~  KeyPointChain.cpp~  KeyPointChain.h~  Line.h~  Line2D.cpp~  Plane.cpp  Plane.cpp~  Plane.h  Plane.h~  PlaneChain.cpp~  Surface.cpp  Surface.h  pprgeometry.h
src/util/: util.cpp  util.h
