<?xml version="1.0"?>
<package>
  <name>Probabilistic-Plane-Refinement</name>
  <version>1.0.0</version>
  <description>The Probabilistic Plane Refinement package</description>

  <maintainer email="ekz@kth.se">Johan Ekekrantz</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>pcl_ros</build_depend>
  <run_depend>pcl_ros</run_depend>
  
  <export>
  </export>
  
</package>
